--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
    [build]
-     command = "next build"
+     command = "npm install next@13.5.6 && next build"
      publish = ".next"
    
    [[plugins]]
@@ -9,3 +9,5 @@
      DATABASE_URL = "postgresql://postgres:xthZEILEuEwybAIgKHDkQImHeueCbAVk@yamanote.proxy.rlwy.net:28084/railway"
      NEXTAUTH_URL = "https://jazzy-salamander-509fc3.netlify.app"
      NEXTAUTH_SECRET = "rastgelebirdeger123456789"
+     NODE_VERSION = "18.17.0"
+     NEXT_TELEMETRY_DISABLED = "1"
