--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,13 @@
-   [build]
-     command = "npm install next@13.5.6 && npm install prisma --no-save && npx prisma generate && next build"
-     publish = ".next"
-   
-   [[plugins]]
-     package = "@netlify/plugin-nextjs"
-   
-   [build.environment]
-     DATABASE_URL = "postgresql://postgres:xthZEILEuEwybAIgKHDkQImHeueCbAVk@yamanote.proxy.rlwy.net:28084/railway"
-     NEXTAUTH_URL = "https://jazzy-salamander-509fc3.netlify.app"
-     NEXTAUTH_SECRET = "rastgelebirdeger123456789"
-     NODE_VERSION = "18.18.0"
-     NEXT_TELEMETRY_DISABLED = "1"
+[build]
+  command = "npm run build"
+  publish = ".next"
+  
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
+
+[build.environment]
+  DATABASE_URL = "postgresql://postgres:xthZEILEuEwybAIgKHDkQImHeueCbAVk@yamanote.proxy.rlwy.net:28084/railway"
+  NEXTAUTH_URL = "https://jazzy-salamander-509fc3.netlify.app"
+  NEXTAUTH_SECRET = "rastgelebirdeger123456789"
+  NODE_VERSION = "18.18.0"
+  NEXT_TELEMETRY_DISABLED = "1"
