--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^5.10.2",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.7",
-    "next": "15.3.1",
-    "next-auth": "^4.24.11",
+    "next": "13.5.6",
+    "next-auth": "^4.24.5",
     "openai": "^4.97.0",
-    "prisma": "^6.7.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "prisma": "^5.10.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "uuid": "^11.1.0"
   },
@@ -29,10 +30,13 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "tailwindcss": "^4",
     "typescript": "^5",
     "ts-node": "^10.9.1"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
