--- a/netlify.toml
+++ b/netlify.toml
@@ -8,10 +8,7 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Content-Security-Policy = "default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: https://firebasestorage.googleapis.com https://*.googleusercontent.com https://*.googleapis.com https://i.imgur.com https://*.unsplash.com https://*.pexels.com"
+    Content-Security-Policy = "style-src 'self' 'unsafe-inline'; img-src 'self' data: https://firebasestorage.googleapis.com https://*.googleusercontent.com https://*.googleapis.com https://i.imgur.com https://*.unsplash.com https://*.pexels.com"
 
 [build.environment]
   DATABASE_URL = "postgresql://postgres:xthZEILEuEwybAIgKHDkQImHeueCbAVk@yamanote.proxy.rlwy.net:28084/railway"
