--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.2",
     "@prisma/client": "^5.10.2",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
@@ -20,21 +21,21 @@
     "next": "13.5.6",
     "next-auth": "^4.24.5",
     "openai": "^4.97.0",
+    "postcss": "^8.4.24",
     "prisma": "^5.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "tailwindcss": "^3.3.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "tailwindcss": "^4",
-    "typescript": "^5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18.18.0"
